{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 33,
  "lineage": "0f590b8b-780b-b6be-fbf3-62bb2d398762",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web-app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB/frontendIPConfigurations/primary",
                "load_balancer_rules": [
                  "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB/loadBalancingRules/HTTP"
                ],
                "name": "primary",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/publicIPAddresses/lb-public"
              }
            ],
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB",
            "location": "australiacentral",
            "name": "Web-app-LB",
            "resource_group_name": "nuwm-cloud",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_linux_virtual_machine.savers",
            "azurerm_network_interface.saver-net-interface",
            "azurerm_public_ip.lb-public",
            "azurerm_resource_group.nuwm-cloud",
            "azurerm_subnet.vm-subnet",
            "azurerm_virtual_network.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkInterfaces/vm-net-interface-saver-0/ipConfigurations/internal"
            ],
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB/backendAddressPools/LB-backend_address_pool",
            "load_balancing_rules": [
              "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB/loadBalancingRules/HTTP"
            ],
            "loadbalancer_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB",
            "name": "LB-backend_address_pool"
          },
          "dependencies": [
            "azurerm_lb.web-app-lb",
            "azurerm_linux_virtual_machine.savers",
            "azurerm_network_interface.saver-net-interface",
            "azurerm_public_ip.lb-public",
            "azurerm_resource_group.nuwm-cloud",
            "azurerm_subnet.vm-subnet",
            "azurerm_virtual_network.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "http-probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB/probes/http-running-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB/loadBalancingRules/HTTP"
            ],
            "loadbalancer_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB",
            "name": "http-running-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web-app-lb",
            "azurerm_linux_virtual_machine.savers",
            "azurerm_network_interface.saver-net-interface",
            "azurerm_public_ip.lb-public",
            "azurerm_resource_group.nuwm-cloud",
            "azurerm_subnet.vm-subnet",
            "azurerm_virtual_network.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "http-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB/backendAddressPools/LB-backend_address_pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB/frontendIPConfigurations/primary",
            "frontend_ip_configuration_name": "primary",
            "frontend_port": 80,
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB/loadBalancingRules/HTTP",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB",
            "name": "HTTP",
            "probe_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB/probes/http-running-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web-app-lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_lb_probe.http-probe",
            "azurerm_linux_virtual_machine.savers",
            "azurerm_network_interface.saver-net-interface",
            "azurerm_network_interface_backend_address_pool_association.savers",
            "azurerm_public_ip.lb-public",
            "azurerm_resource_group.nuwm-cloud",
            "azurerm_subnet.vm-subnet",
            "azurerm_virtual_network.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "saver-net-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkInterfaces/vm-net-interface-saver-0",
            "internal_domain_name_suffix": "cfydwhbh0h1ulkcvv0hulad10g.cbrx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/virtualNetworks/nuwm-network/subnets/vm-subnet"
              }
            ],
            "location": "australiacentral",
            "mac_address": "00-0D-3A-8A-2D-95",
            "name": "vm-net-interface-saver-0",
            "private_ip_address": "10.0.1.7",
            "private_ip_addresses": [
              "10.0.1.7"
            ],
            "resource_group_name": "nuwm-cloud",
            "virtual_machine_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Compute/virtualMachines/saver-0"
          },
          "dependencies": [
            "azurerm_resource_group.nuwm-cloud",
            "azurerm_subnet.vm-subnet",
            "azurerm_virtual_network.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "sensor-net-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkInterfaces/vm-net-interface-sensor-0",
            "internal_domain_name_suffix": "cfydwhbh0h1ulkcvv0hulad10g.cbrx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/virtualNetworks/nuwm-network/subnets/vm-subnet"
              }
            ],
            "location": "australiacentral",
            "mac_address": "00-0D-3A-CC-7F-BE",
            "name": "vm-net-interface-sensor-0",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "nuwm-cloud",
            "virtual_machine_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Compute/virtualMachines/sensor-0"
          },
          "dependencies": [
            "azurerm_resource_group.nuwm-cloud",
            "azurerm_subnet.vm-subnet",
            "azurerm_virtual_network.nuwm-cloud"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkInterfaces/vm-net-interface-sensor-1",
            "internal_domain_name_suffix": "cfydwhbh0h1ulkcvv0hulad10g.cbrx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/virtualNetworks/nuwm-network/subnets/vm-subnet"
              }
            ],
            "location": "australiacentral",
            "mac_address": "00-0D-3A-95-CF-A0",
            "name": "vm-net-interface-sensor-1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "nuwm-cloud",
            "virtual_machine_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Compute/virtualMachines/sensor-1"
          },
          "dependencies": [
            "azurerm_resource_group.nuwm-cloud",
            "azurerm_subnet.vm-subnet",
            "azurerm_virtual_network.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm-net-interface-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkInterfaces/vm-net-interface-pub",
            "internal_domain_name_suffix": "cfydwhbh0h1ulkcvv0hulad10g.cbrx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "public",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/publicIPAddresses/vm-public",
                "subnet_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/virtualNetworks/nuwm-network/subnets/vm-subnet"
              }
            ],
            "location": "australiacentral",
            "mac_address": "00-0D-3A-8A-22-8B",
            "name": "vm-net-interface-pub",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "nuwm-cloud",
            "virtual_machine_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Compute/virtualMachines/management"
          },
          "dependencies": [
            "azurerm_public_ip.vm-public",
            "azurerm_resource_group.nuwm-cloud",
            "azurerm_subnet.vm-subnet",
            "azurerm_virtual_network.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "savers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB/backendAddressPools/LB-backend_address_pool",
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkInterfaces/vm-net-interface-saver-0/ipConfigurations/internal|/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/loadBalancers/Web-app-LB/backendAddressPools/LB-backend_address_pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkInterfaces/vm-net-interface-saver-0"
          },
          "dependencies": [
            "azurerm_lb.web-app-lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_linux_virtual_machine.savers",
            "azurerm_network_interface.saver-net-interface",
            "azurerm_public_ip.lb-public",
            "azurerm_resource_group.nuwm-cloud",
            "azurerm_subnet.vm-subnet",
            "azurerm_virtual_network.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "savers-security-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkInterfaces/vm-net-interface-saver-0|/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkSecurityGroups/nuwm-security-group-http",
            "network_interface_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkInterfaces/vm-net-interface-saver-0",
            "network_security_group_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkSecurityGroups/nuwm-security-group-http"
          },
          "dependencies": [
            "azurerm_network_interface.saver-net-interface",
            "azurerm_network_security_group.nuwm-cloud-security-savers",
            "azurerm_resource_group.nuwm-cloud",
            "azurerm_subnet.vm-subnet",
            "azurerm_virtual_network.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "security-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkInterfaces/vm-net-interface-pub|/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkSecurityGroups/nuwm-security-group-public",
            "network_interface_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkInterfaces/vm-net-interface-pub",
            "network_security_group_id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkSecurityGroups/nuwm-security-group-public"
          },
          "dependencies": [
            "azurerm_network_interface.vm-net-interface-pub",
            "azurerm_network_security_group.nuwm-cloud-security-public",
            "azurerm_public_ip.vm-public",
            "azurerm_resource_group.nuwm-cloud",
            "azurerm_subnet.vm-subnet",
            "azurerm_virtual_network.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nuwm-cloud-security-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkSecurityGroups/nuwm-security-group-public",
            "location": "australiacentral",
            "name": "nuwm-security-group-public",
            "resource_group_name": "nuwm-cloud",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ping",
                "priority": 100,
                "protocol": "Icmp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nuwm-cloud-security-savers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkSecurityGroups/nuwm-security-group-http",
            "location": "australiacentral",
            "name": "nuwm-security-group-http",
            "resource_group_name": "nuwm-cloud",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkSecurityGroups/nuwm-security-group-http/securityRules/allow-http",
            "name": "allow-http",
            "network_security_group_name": "nuwm-security-group-http",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "nuwm-cloud",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nuwm-cloud-security-savers",
            "azurerm_resource_group.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkSecurityGroups/nuwm-security-group-public/securityRules/allow-ping",
            "name": "allow-ping",
            "network_security_group_name": "nuwm-security-group-public",
            "priority": 100,
            "protocol": "Icmp",
            "resource_group_name": "nuwm-cloud",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nuwm-cloud-security-public",
            "azurerm_resource_group.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/networkSecurityGroups/nuwm-security-group-public/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "nuwm-security-group-public",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "nuwm-cloud",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nuwm-cloud-security-public",
            "azurerm_resource_group.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/publicIPAddresses/lb-public",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.213.243.170",
            "ip_version": "IPv4",
            "location": "australiacentral",
            "name": "lb-public",
            "resource_group_name": "nuwm-cloud",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/publicIPAddresses/vm-public",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.213.243.73",
            "ip_version": "IPv4",
            "location": "australiacentral",
            "name": "vm-public",
            "resource_group_name": "nuwm-cloud",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vm-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/virtualNetworks/nuwm-network/subnets/vm-subnet",
            "name": "vm-subnet",
            "resource_group_name": "nuwm-cloud",
            "service_endpoints": [
              "Microsoft.AzureCosmosDB"
            ],
            "virtual_network_name": "nuwm-network"
          },
          "dependencies": [
            "azurerm_resource_group.nuwm-cloud",
            "azurerm_virtual_network.nuwm-cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "nuwm-cloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1c3b7011-d127-45f7-a855-ae8f45807bd6",
            "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/virtualNetworks/nuwm-network",
            "location": "australiacentral",
            "name": "nuwm-network",
            "resource_group_name": "nuwm-cloud",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/f9bf6f1c-3e96-4c71-870b-74211270087e/resourceGroups/nuwm-cloud/providers/Microsoft.Network/virtualNetworks/nuwm-network/subnets/vm-subnet",
                "name": "vm-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.nuwm-cloud"
          ]
        }
      ]
    }
  ]
}